--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container-fluid">
           <a class="navbar-brand" href="#" id="logo"
-            ><img src="logo.png" alt=""
+            ><img class="img" src="logo.png" alt=""
           /></a>
           <button
             class="navbar-toggler"
